--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.1",
     "babel-plugin-add-module-exports": "^0.1.2",
@@ -87,6 +88,7 @@
     "file-loader": "^0.8.5",
     "http-proxy": "^1.12.0",
     "lodash": "^4.17.4",
+    "mongoose": "^4.9.1",
     "piping": "^0.3.0",
     "pretty-error": "^1.2.0",
     "react": "0.14.8",
