--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "piping": "^0.3.0",
     "pretty-error": "^1.2.0",
     "react": "0.14.8",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "0.14.8",
     "react-helmet": "^2.2.0",
     "react-redux": "^4.0.0",
