--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.14.1",
     "compression": "^1.6.0",
     "d3": "^4.7.3",
@@ -86,8 +87,11 @@
     "express-session": "^1.12.1",
     "file-loader": "^0.8.5",
     "http-proxy": "^1.12.0",
+    "jsonwebtoken": "^7.4.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.9.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "piping": "^0.3.0",
     "pretty-error": "^1.2.0",
     "react": "0.14.8",
