--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.14.1",
     "compression": "^1.6.0",
+    "cookie-parser": "^1.4.3",
     "d3": "^4.7.3",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
